# devicectrl-esp32-switch

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: crypto.rs  main.rs  switch.rs  transport.rs  wifi.rs
